--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
               second to none
               <br /> our staff
               <br /> represents Thainess
-              <br /> our key to success
+              <br /> our key to successk
               <br />
               <span>
                 รวมใจฝันสู่วันหน้า <br />
@@ -163,8 +163,52 @@
                   <i class="flaticon-right-quotes-sign"></i>
                 </p>
                   <div class="bold thk">ศิริวัฒน์ วงศ์จารุกร (SIRIWAT VONGJARUKORN)</div>
-                <div>
+                <div class='grey fw400'>
                   CHAIRMAN OF THE BOARD
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class='modal-hide-container' id='modal-link--board2'>
+            <div class='modal-hide'>
+              <div class='x-modal'>X</div>
+              <img src="./images/girl.png" />
+              <div class="board-detail modal-content">
+                <p>
+                  <i class="flaticon-left-quotes-sign"></i>
+                  <span>
+                    เราเคยมีประสบการณ์ทำงานด้านภาพยนตร์ไทยมาแล้ว ก็เลยอยากลองทำ
+                    Content ในรูปแบบอื่นดูบ้าง เราเลยไปชวนคนเก่งๆ
+                    ในสายเอนเตอร์เทนเมนท์มารวมตัวกันเพื่อสร้างสรรค์โชว์นี้ ซึ่งเราหวังว่า
+                    KAAN Show โชว์ของคนไทยที่คิดและสร้างสรรค์โดยคนไทยนี้
+                    จะเซ็ทมาตรฐานใหม่ของการแสดงในเมืองไทย
+                    ที่ทั้งชาวไทยและชาวต่างชาติจะต้องยอมรับในฝีมือ
+                  </span>
+                  <i class="flaticon-right-quotes-sign"></i>
+                </p>
+                  <div class="bold uppercase">จินา โอสถศิลป์ (Jina Osothsilp)</div>
+                <div class='grey fw400'>
+                  EXCUTIVE COMMITEE
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class='modal-hide-container' id='modal-link--board3'>
+            <div class='modal-hide'>
+              <div class='x-modal'>X</div>
+              <img src="./images/board-glass.png" />
+              <div class="board-detail modal-content">
+                <p>
+                  <i class="flaticon-left-quotes-sign"></i>
+                  <span>
+                    เราเลือกเทคโนโลยีที่ดีที่สุดของโลกมากมายหลายรูปแบบเข้ามาใช้ร่วมสร้างสรรค์นวัตกรรมการแสดงในครั้งนี้ เพื่อเป้าหมายที่จะทำให้
+                    KAAN Showก้าวขึ้นเป็นสุดยอดการแสดงที่ผสมผสานเทคโนโลยีล้ำสมัยอันโดดเด่นแห่งหนึ่งของโลก
+                  </span>
+                  <i class="flaticon-right-quotes-sign"></i>
+                </p>
+                  <div class="bold uppercase">อนันต์ ตรีสิริเกษม (Anant Trisirikasem)</div>
+                <div class='grey fw400'>
+                  Executive Committee,<br> Theatre’s Technology and System Specialist
                 </div>
               </div>
             </div>
@@ -191,7 +235,7 @@
                       </div>
                     </div>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board1" class='modal-trigger'>
+                      <a href="#modal-link--board2" class='modal-trigger'>
                         <img src="./images/girl.png" />
                       </a>
                       <div class="board-detail modal-content">
@@ -207,14 +251,14 @@
                       </div>
                     </div>
                     <div class="board-card col-sm-4">
-                      <a href="#modal-link--board1" class='modal-trigger'>
+                      <a href="#modal-link--board3" class='modal-trigger'>
                         <img src="./images/board-glass.png" />
                       </a>
                       <div class="board-detail modal-content">
                         <div class='board-detail-name'>
-                          <span class="board-thai-name">อนันต์ ตรีสิริเกษม</span>
+                          <span class="board-thai-name">ยงยุทธ ทองกองทุน</span>
                           <br />
-                          <span class="bold board-english-name">Anant Trisirikasem</span>
+                          <span class="bold board-english-name">Yongyoot Thongkongtoon</span>
                           <br />
                           <span class="grey board-position">
                             EXCUTIVE COMMITEE,<br />
@@ -237,7 +281,7 @@
                         <div class='board-detail-name'>
                           <span class="board-thai-name">อนันต์ ตรีสิริเกษม</span>
                           <br />
-                          <span class="bold board-english-name">YONGYOOT THONGKONGTOON</span>
+                          <span class="bold board-english-name">Anant Trisirikasem</span>
                           <br />
                           <span class="grey board-position">
                             Executive Committee, <br />Theatre’s Technology and SystemSpecialist
