--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,10 @@
           <img src='./images/logo/Punjaluck_full.png' />
           <p>
             บริษัท ปัญจลักษณ์พาสุข จำกัด คือ เจ้าของและผู้ดำเนินกิจการ D'LUCK CINEMATIC THEATRE และเป็นผู้สร้าง นวัตกรรมให้กับอุตสาหการการท่องเที่ยว ด้วยการนำเสนอการแสดงสดรูปแบบใหม่ KAAN SHOW โดยมุ่งมั่นให้ การแสดงนี้ มีมาตรฐานระดับสากลในทุกๆด้าน ทั้งความคิดสร้างสรรค์
-            เทคโนโลยี โปดักชั่น ตลอดจนทีมงาน และ การดำเนินการอย่างมืออาชีพ เราต้องการให้ KAAN เป็นการแสดงที่ผสานเทคนิกพิเศษระดับโลก <span class='readmore'>READ MORE</span>
+            เทคโนโลยี โปดักชั่น ตลอดจนทีมงาน และ การดำเนินการอย่างมืออาชีพ
+            <span class="hidden-readmore">เราต้องการให้ KAAN เป็นการแสดงที่ผสานเทคนิกพิเศษระดับโลก เป็นการแสดงที่ผสานเทคนิคพิเศษระดับโลกเข้ากับเทคนิคของภาพยนตร์และการแสดงสดบนเวที
+              ทั้งยังผสมเอกลักษณ์ไทยลงไปเพื่อสร้างเสน่ห์เฉพาะตัวให้กับการแสดง โดยการใช้ผู้เชี่ยวชาญจากหลากหลายแขนงมาร่วมกันสร้างสรรค์โชว์เพื่อสร้างมาตรฐานใหม่ให้กับการแสดงไทยสู่การยอมรับในระดับสากล</span>
+            <span class='readmore'>READ MORE</span>
           </p>
         </div>
       </section>
@@ -294,7 +297,7 @@
                       <a href="#modal-link--board1" class='modal-trigger'>
                         <img src="./images/Untitled-4.png" />
                       </a>
-                      <div class="board-detail modal-content">
+                      <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">ศิริวัฒน์ วงศ์จารุกร</span>
                           <br />
@@ -310,7 +313,7 @@
                       <a href="#modal-link--board2" class='modal-trigger'>
                         <img src="./images/girl.png" />
                       </a>
-                      <div class="board-detail modal-content">
+                      <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">จินา โอสถศิลป์</span>
                           <br />
@@ -326,7 +329,7 @@
                       <a href="#modal-link--board3" class='modal-trigger'>
                         <img src="./images/board-glass.png" />
                       </a>
-                      <div class="board-detail modal-content">
+                      <div class="board-detail">
                         <div class='board-detail-name'>
                           <span class="board-thai-name">ยงยุทธ ทองกองทุน</span>
                           <br />
@@ -503,9 +506,6 @@
                   "อุตสาหกรรมบันเทิงไทยมีศักยภาพ ที่จะไปแข่งบนเวทีโลกได้อย่างภาคภูมิ
                   และไม่แพ้ใคร เราตั้งใจสร้าง KAAN SHOW ให้เป็นนวัตกรรมการท่องเที่ยวที่เกิดจากฝีมือความคิด"
                 </p>
-                <div class="facebook-icon">
-                  <img src='./images/facebook.png' />
-                </div>
               </div>
             </div>
           </div>
