fix another time

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" type="text/css" href="./css/unsliderdots.css">
   <link rel="stylesheet" type="text/css" href="./css/flaticon.css">
 </head>
-
 <body>
   <div class='container'>
     <div class='nav-bar'>
@@ -33,7 +32,9 @@
         <span class='nav-bar__navigation'>D'LUCK</span>
         <span class='nav-bar__navigation'>PANJALUCK</span>
         <span class='nav-bar__navigation'>LANGUAGE</span>
+        <span class='nav-bar__navigation'><i class='flaticon-search'></i></span>
         <span class='nav-bar__navigation ticket'>TICKET</span>
+
       </div>
     </div>
     <div class='sections'>
@@ -531,21 +532,17 @@
             <a href='#modal-link--partner3' class='modal-trigger'>
               <div class='logo-box'>
                 <div class='logo-box__content'>
-
                   <img src='./images/logo/XTP official logo.png' width='170'>
-
                 </div>
                 <div class='logo-des'>XTREAM PLUS</div>
               </div>
-            </div>
-          </a>
-          <a href='#modal-link--partner4' class='modal-trigger'>
-            <div class='row'>
+            </a>
+          </div>
+          <div class='row'>
+            <a href='#modal-link--partner4' class='modal-trigger'>
               <div class='logo-box'>
                 <div class='logo-box__content'>
-
                   <img src='./images/logo/logo baanrig 2012@1x.png' width="120">
-
                 </div>
                 <div class='logo-des'>BAAN RIG</div>
               </div>
@@ -557,7 +554,7 @@
                   <img src='./images/logo/logo-scenario.png' width="170">
 
                 </div>
-                <div class='logo-des'>SCENARIO</div>
+              <div class='logo-des'>SCENARIO</div>
               </div>
             </a>
             <a href='#modal-link--partner6' class='modal-trigger'>
