fix height moda

--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@
                   <i class="flaticon-right-quotes-sign"></i>
                 </p>
                 <div class="bold thk">ศิริวัฒน์ วงศ์จารุกร (SIRIWAT VONGJARUKORN)</div>
-                <div class='grey fw400'>
+                <div class='grey fw400 uppercase'>
                   CHAIRMAN OF THE BOARD
                 </div>
               </div>
@@ -197,7 +197,7 @@
                   <i class="flaticon-right-quotes-sign"></i>
                 </p>
                 <div class="bold uppercase">จินา โอสถศิลป์ (Jina Osothsilp)</div>
-                <div class='grey fw400'>
+                <div class='grey fw400 uppercase'>
                   EXCUTIVE COMMITEE
                 </div>
               </div>
@@ -218,7 +218,7 @@
                   <i class="flaticon-right-quotes-sign"></i>
                 </p>
                 <div class="bold uppercase">ยงยุทธ ทองกองทุน (Yongyoot Thongkongtoon)</div>
-                <div class='grey fw400'>
+                <div class='grey fw400 uppercase'>
                   Executive Committee,<br>Producer and Artistic Director
                 </div>
               </div>
@@ -238,7 +238,7 @@
                   <i class="flaticon-right-quotes-sign"></i>
                 </p>
                 <div class="bold uppercase">อนันต์ ตรีสิริเกษม (Anant Trisirikasem)</div>
-                <div class='grey fw400'>
+                <div class='grey fw400 uppercase'>
                   Executive Committee,<br> Theatre’s Technology and System Specialist
                 </div>
               </div>
@@ -259,7 +259,7 @@
                   <i class="flaticon-right-quotes-sign"></i>
                 </p>
                 <div class="bold uppercase">ธนพล วิระเทพสุภรณ์ (Tanapol Viratepsuporn)</div>
-                <div class='grey fw400'>
+                <div class='grey fw400 uppercase'>
                   Chief Commercial Officer
                 </div>
               </div>
@@ -282,7 +282,7 @@
                   <i class="flaticon-right-quotes-sign"></i>
                 </p>
                 <div class="bold uppercase">กานต์กฤดิชย์ นิ่มสมบุญ (Karnkridit Nimsombun)</div>
-                <div class='grey fw400'>
+                <div class='grey fw400 uppercase'>
                   Managing Director
                 </div>
               </div>
