--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" type="text/css" href="./css/unslider.css">
   <link rel="stylesheet" type="text/css" href="./css/unsliderdots.css">
   <link rel="stylesheet" type="text/css" href="./css/flaticon.css">
+  <link href="https://fonts.googleapis.com/css?family=Chonburi" rel="stylesheet">
 </head>
 <body>
   <div class='container'>
@@ -30,25 +31,27 @@
       <div class='nav-bar__navigation-container'>
         <span class='nav-bar__navigation'>KAAN SHOW</span>
         <span class='nav-bar__navigation'>D'LUCK</span>
-        <span class='nav-bar__navigation'>PANJALUCK</span>
+        <span class='nav-bar__navigation active'>PANJALUCK</span>
         <span class='nav-bar__navigation'>LANGUAGE</span>
         <span class='nav-bar__navigation'><i class='flaticon-search'></i></span>
         <span class='nav-bar__navigation ticket'>TICKET</span>
-
       </div>
     </div>
     <div class='sections'>
       <div class='side-navigation'></div>
       <section class='section' id='business-page'>
-        <div class='nav-hidden-name'>our<br>business</div>
+        <div class='nav-hidden-name'>our<br>business
+        </div>
         <div class='parallax'>
           <h1>OUR BUSINESS</h1>
           <img src='./images/logo/Punjaluck_full.png' />
           <p>
             บริษัท ปัญจลักษณ์พาสุข จำกัด คือ เจ้าของและผู้ดำเนินกิจการ D'LUCK CINEMATIC THEATRE และเป็นผู้สร้าง นวัตกรรมให้กับอุตสาหการการท่องเที่ยว ด้วยการนำเสนอการแสดงสดรูปแบบใหม่ KAAN SHOW โดยมุ่งมั่นให้ การแสดงนี้ มีมาตรฐานระดับสากลในทุกๆด้าน ทั้งความคิดสร้างสรรค์
             เทคโนโลยี โปดักชั่น ตลอดจนทีมงาน และ การดำเนินการอย่างมืออาชีพ
-            <span class="hidden-readmore">เราต้องการให้ KAAN เป็นการแสดงที่ผสานเทคนิกพิเศษระดับโลก เป็นการแสดงที่ผสานเทคนิคพิเศษระดับโลกเข้ากับเทคนิคของภาพยนตร์และการแสดงสดบนเวที
-              ทั้งยังผสมเอกลักษณ์ไทยลงไปเพื่อสร้างเสน่ห์เฉพาะตัวให้กับการแสดง โดยการใช้ผู้เชี่ยวชาญจากหลากหลายแขนงมาร่วมกันสร้างสรรค์โชว์เพื่อสร้างมาตรฐานใหม่ให้กับการแสดงไทยสู่การยอมรับในระดับสากล</span>
+            <span class="hidden-readmore">
+              เราต้องการให้ KAAN เป็นการแสดงที่ผสานเทคนิกพิเศษระดับโลก เป็นการแสดงที่ผสานเทคนิคพิเศษระดับโลกเข้ากับเทคนิคของภาพยนตร์และการแสดงสดบนเวที
+              ทั้งยังผสมเอกลักษณ์ไทยลงไปเพื่อสร้างเสน่ห์เฉพาะตัวให้กับการแสดง โดยการใช้ผู้เชี่ยวชาญจากหลากหลายแขนงมาร่วมกันสร้างสรรค์โชว์เพื่อสร้างมาตรฐานใหม่ให้กับการแสดงไทยสู่การยอมรับในระดับสากล
+            </span>
             <span class='readmore'>READ MORE</span>
           </p>
         </div>
@@ -66,7 +69,7 @@
         </div>
       </section>
       <section class='section' id='corporate-page'>
-        <div class='nav-hidden-name'>coporate<br>value</div>
+        <div class='nav-hidden-name'>corporate<br>value</div>
         <div class='parallax'>
           <h1>CORPORATE VALUE</h1>
           <div class='video-container'>
@@ -164,13 +167,13 @@
               <img src="./images/Untitled-4.png" />
               <div class="board-detail modal-content">
                 <p>
-                  <i class="flaticon-left-quotes-sign"></i>
+                  <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
                   <span>
                     คำจำกัดความของ KAAN Show คือ A Spectacular Cinematic Live Experience
                     การแสดงที่ผสมผสานเทคนิคระดับโลกเข้ากับภาพยนตร์และการแสดงสดบนเวที ซึ่งเป็นสิ่งที่ไม่เคยเกิดขึ้นมาก่อนในเมืองไทยเราจึงต้องระดมคนเก่งที่สุดในแต่ละด้านกว่า 600 ชีวิต
                     ที่เรียกได้ว่าเป็นทีมชาติฝั่งเอ็นเตอร์เทนเมนท์ของประเทศไทยเราตั้งใจสร้างสรรค์ให้การแสดงนี้เป็นฝีมือคนไทยที่ไปไกลระดับโลก
                   </span>
-                  <i class="flaticon-right-quotes-sign"></i>
+                  <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
                 <div class="bold thk">ศิริวัฒน์ วงศ์จารุกร (SIRIWAT VONGJARUKORN)</div>
                 <div class='grey fw400 uppercase'>
@@ -185,7 +188,7 @@
               <img src="./images/girl.png" />
               <div class="board-detail modal-content">
                 <p>
-                  <i class="flaticon-left-quotes-sign"></i>
+                  <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
                   <span>
                     เราเคยมีประสบการณ์ทำงานด้านภาพยนตร์ไทยมาแล้ว ก็เลยอยากลองทำ
                     Content ในรูปแบบอื่นดูบ้าง เราเลยไปชวนคนเก่งๆ
@@ -194,9 +197,9 @@
                     จะเซ็ทมาตรฐานใหม่ของการแสดงในเมืองไทย
                     ที่ทั้งชาวไทยและชาวต่างชาติจะต้องยอมรับในฝีมือ
                   </span>
-                  <i class="flaticon-right-quotes-sign"></i>
+                  <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
-                <div class="bold uppercase">จินา โอสถศิลป์ (Jina Osothsilp)</div>
+                <div class="uppercase ">จินา โอสถศิลป์ (Jina Osothsilp)</div>
                 <div class='grey fw400 uppercase'>
                   EXCUTIVE COMMITEE
                 </div>
@@ -209,13 +212,13 @@
               <img src="./images/board-glass.png" />
               <div class="board-detail modal-content">
                 <p>
-                  <i class="flaticon-left-quotes-sign"></i>
+                  <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
                   <span>
                     คำจำกัดความของ KAAN Show คือ A Spectacular Cinematic Live Experience การแสดงที่ผสมผสานเทคนิคระดับโลกเข้ากับภาพยนตร์และ
                     การแสดงสดบนเวที ซึ่งเป็นสิ่งที่ไม่เคยเกิดขึ้นมาก่อนในเมืองไทยเราจึงต้องระดมคนเก่งที่สุดในแต่ละด้านกว่า 600 ชีวิตที่เรียกได้ว่าเป็นทีมชาติฝั่งเอ็นเตอร์เทนเมนท์ของประเทศไทย
                     เราตั้งใจสร้างสรรค์ให้การแสดงนี้เป็นฝีมือคนไทยที่ไปไกลระดับโลก
                   </span>
-                  <i class="flaticon-right-quotes-sign"></i>
+                  <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
                 <div class="bold uppercase">ยงยุทธ ทองกองทุน (Yongyoot Thongkongtoon)</div>
                 <div class='grey fw400 uppercase'>
@@ -230,12 +233,12 @@
               <img src="./images/anant.png" />
               <div class="board-detail modal-content">
                 <p>
-                  <i class="flaticon-left-quotes-sign"></i>
+                  <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
                   <span>
                     เราเลือกเทคโนโลยีที่ดีที่สุดของโลกมากมายหลายรูปแบบเข้ามาใช้ร่วมสร้างสรรค์นวัตกรรมการแสดงในครั้งนี้ เพื่อเป้าหมายที่จะทำให้
                     KAAN Showก้าวขึ้นเป็นสุดยอดการแสดงที่ผสมผสานเทคโนโลยีล้ำสมัยอันโดดเด่นแห่งหนึ่งของโลก
                   </span>
-                  <i class="flaticon-right-quotes-sign"></i>
+                  <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
                 <div class="bold uppercase">อนันต์ ตรีสิริเกษม (Anant Trisirikasem)</div>
                 <div class='grey fw400 uppercase'>
@@ -250,13 +253,13 @@
               <img src="./images/tanapol.png" />
               <div class="board-detail modal-content">
                 <p>
-                  <i class="flaticon-left-quotes-sign"></i>
+                  <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
                   <span>
                     “อุตสาหกรรมบันเทิงเป็นธุรกิจที่มีมูลค่าสูงและมีแนวโน้มเติบโตได้อย่างไม่จำกัด เราทำ KAAN Show
                     ขึ้นเพื่อตั้งใจสร้างมูลค่าให้กับความคิดสร้างสรรค์ของคนไทยให้ทั่วโลกยอมรับและเห็นคุณค่า มูลค่าที่ได้กลับมาไม่ใช่เพียงเม็ดเงินมหาศาลเท่านั้น
                     แต่จะสร้างผลประโยชน์ด้านอื่นๆ อีกมากมายให้กับประเทศไทยด้วย”
                   </span>
-                  <i class="flaticon-right-quotes-sign"></i>
+                  <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
                 <div class="bold uppercase">ธนพล วิระเทพสุภรณ์ (Tanapol Viratepsuporn)</div>
                 <div class='grey fw400 uppercase'>
@@ -271,7 +274,7 @@
               <img src="./images/anant.png" />
               <div class="board-detail modal-content">
                 <p>
-                  <i class="flaticon-left-quotes-sign"></i>
+                  <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
                   <span>
                     เป้าหมายของ KAAN คือการเป็นโชว์อันดับหนึ่งของเอเชีย และทำให้ D’LUCK Cinematic Theatre กลายเป็นแหล่งท่องเที่ยวแห่งใหม่ของไทยที่ดึงดูดนักท่องเที่ยวจากทั่วโลก
                     รวมถึงสร้างรายได้ให้กับประเทศเราตั้งใจสร้างสรรค์การแสดงนี้ให้ได้มาตรฐานระดับโลกในทุกๆ ด้าน
@@ -279,7 +282,7 @@
                     ด้านเข้าด้วยกัน ที่สำคัญเราไม่ลืมสอดแทรกเสน่ห์ความเป็นไทยเข้าไปในทุกการให้บริการของเรา
                     เพื่อให้ผู้ชมทุกคนประทับใจกับการสัมผัสประสบการณ์ที่แปลกใหม่นี้
                   </span>
-                  <i class="flaticon-right-quotes-sign"></i>
+                  <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
                 <div class="bold uppercase">กานต์กฤดิชย์ นิ่มสมบุญ (Karnkridit Nimsombun)</div>
                 <div class='grey fw400 uppercase'>
@@ -554,7 +557,7 @@
                   <img src='./images/logo/logo-scenario.png' width="170">
 
                 </div>
-              <div class='logo-des'>SCENARIO</div>
+                <div class='logo-des'>SCENARIO</div>
               </div>
             </a>
             <a href='#modal-link--partner6' class='modal-trigger'>
@@ -635,6 +638,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js'></script>
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/unslider/2.0.3/js/unslider-min.js'></script>
+<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 <script src='./js/index.js'></script>
 
 </html>
