--- a/public/index.html
+++ b/public/index.html
@@ -175,8 +175,8 @@
                   </span>
                   <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
-                <div class="bold thk">ศิริวัฒน์ วงศ์จารุกร (SIRIWAT VONGJARUKORN)</div>
-                <div class='grey fw400 uppercase'>
+                <div class="grey uppercase">ศิริวัฒน์ วงศ์จารุกร (SIRIWAT VONGJARUKORN)</div>
+                <div class='grey uppercase'>
                   CHAIRMAN OF THE BOARD
                 </div>
               </div>
@@ -199,8 +199,8 @@
                   </span>
                   <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
-                <div class="uppercase ">จินา โอสถศิลป์ (Jina Osothsilp)</div>
-                <div class='grey fw400 uppercase'>
+                <div class="uppercase grey">จินา โอสถศิลป์ (Jina Osothsilp)</div>
+                <div class='grey uppercase'>
                   EXCUTIVE COMMITEE
                 </div>
               </div>
@@ -220,8 +220,8 @@
                   </span>
                   <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
-                <div class="bold uppercase">ยงยุทธ ทองกองทุน (Yongyoot Thongkongtoon)</div>
-                <div class='grey fw400 uppercase'>
+                <div class="grey uppercase">ยงยุทธ ทองกองทุน (Yongyoot Thongkongtoon)</div>
+                <div class='grey uppercase'>
                   Executive Committee,<br>Producer and Artistic Director
                 </div>
               </div>
@@ -240,8 +240,8 @@
                   </span>
                   <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
-                <div class="bold uppercase">อนันต์ ตรีสิริเกษม (Anant Trisirikasem)</div>
-                <div class='grey fw400 uppercase'>
+                <div class="grey uppercase">อนันต์ ตรีสิริเกษม (Anant Trisirikasem)</div>
+                <div class='grey uppercase'>
                   Executive Committee,<br> Theatre’s Technology and System Specialist
                 </div>
               </div>
@@ -261,8 +261,8 @@
                   </span>
                   <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
-                <div class="bold uppercase">ธนพล วิระเทพสุภรณ์ (Tanapol Viratepsuporn)</div>
-                <div class='grey fw400 uppercase'>
+                <div class="grey uppercase">ธนพล วิระเทพสุภรณ์ (Tanapol Viratepsuporn)</div>
+                <div class='grey uppercase'>
                   Chief Commercial Officer
                 </div>
               </div>
@@ -284,8 +284,8 @@
                   </span>
                   <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
-                <div class="bold uppercase">กานต์กฤดิชย์ นิ่มสมบุญ (Karnkridit Nimsombun)</div>
-                <div class='grey fw400 uppercase'>
+                <div class="grey uppercase">กานต์กฤดิชย์ นิ่มสมบุญ (Karnkridit Nimsombun)</div>
+                <div class='grey uppercase'>
                   Managing Director
                 </div>
               </div>
