--- a/public/index.html
+++ b/public/index.html
@@ -46,11 +46,9 @@
           <h1>OUR BUSINESS</h1>
           <img src='./images/logo/Punjaluck_full.png' />
           <p>
-            บริษัท ปัญจลักษณ์พาสุข จำกัด คือ เจ้าของและผู้ดำเนินกิจการ D'LUCK CINEMATIC THEATRE และเป็นผู้สร้าง นวัตกรรมให้กับอุตสาหการการท่องเที่ยว ด้วยการนำเสนอการแสดงสดรูปแบบใหม่ KAAN SHOW โดยมุ่งมั่นให้ การแสดงนี้ มีมาตรฐานระดับสากลในทุกๆด้าน ทั้งความคิดสร้างสรรค์
-            เทคโนโลยี โปดักชั่น ตลอดจนทีมงาน และ การดำเนินการอย่างมืออาชีพ
+            บริษัท ปัญจลักษณ์พาสุข จำกัด คือ เจ้าของและผู้ดำเนินกิจการ D’LUCK Cinematic Theatre และเป็นผู้สร้างนวัตกรรมให้กับอุตสาหกรรมการท่องเที่ยว ด้วยการนำเสนอการแสดงสดรูปแบบใหม่ KAAN Show<br>โดยมุ่งมั่นให้การแสดงนี้มีมาตรฐานระดับสากลในทุกๆ ด้าน ทั้งความคิดสร้างสรรค์ เทคโนโลยี โปรดักชั่น<br>ตลอดจนทีมงานและการทำงานอย่างมืออาชีพ
             <span class="hidden-readmore">
-              เราต้องการให้ KAAN เป็นการแสดงที่ผสานเทคนิกพิเศษระดับโลก เป็นการแสดงที่ผสานเทคนิคพิเศษระดับโลกเข้ากับเทคนิคของภาพยนตร์และการแสดงสดบนเวที
-              ทั้งยังผสมเอกลักษณ์ไทยลงไปเพื่อสร้างเสน่ห์เฉพาะตัวให้กับการแสดง โดยการใช้ผู้เชี่ยวชาญจากหลากหลายแขนงมาร่วมกันสร้างสรรค์โชว์เพื่อสร้างมาตรฐานใหม่ให้กับการแสดงไทยสู่การยอมรับในระดับสากล
+              เราต้องการให้ KAAN เป็นการแสดงที่ผสานเทคนิคพิเศษระดับโลกเข้ากับเทคนิคของภาพยนตร์และการแสดงสดบนเวที ทั้งยังผสมเอกลักษณ์ไทยลงไปเพื่อสร้างเสน่ห์เฉพาะตัวให้กับการแสดง โดยการใช้ผู้เชี่ยวชาญจากหลากหลายแขนงมาร่วมกันสร้างสรรค์โชว์ เพื่อสร้างมาตรฐานใหม่ให้กับการแสดงไทยสู่การยอมรับในระดับสากล
             </span>
             <span class='readmore'>READ MORE</span>
           </p>
@@ -100,7 +98,7 @@
               second to none
               <br /> our staff
               <br /> represents Thainess
-              <br /> our key to successk
+              <br /> our key to success
               <br />
               <span>
                 รวมใจฝันสู่วันหน้า <br />
@@ -169,9 +167,9 @@
                 <p>
                   <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
                   <span>
-                    คำจำกัดความของ KAAN Show คือ A Spectacular Cinematic Live Experience
-                    การแสดงที่ผสมผสานเทคนิคระดับโลกเข้ากับภาพยนตร์และการแสดงสดบนเวที ซึ่งเป็นสิ่งที่ไม่เคยเกิดขึ้นมาก่อนในเมืองไทยเราจึงต้องระดมคนเก่งที่สุดในแต่ละด้านกว่า 600 ชีวิต
-                    ที่เรียกได้ว่าเป็นทีมชาติฝั่งเอ็นเตอร์เทนเมนท์ของประเทศไทยเราตั้งใจสร้างสรรค์ให้การแสดงนี้เป็นฝีมือคนไทยที่ไปไกลระดับโลก
+                    อุตสาหกรรมบันเทิงไทยมีศักยภาพที่จะไปแข่งขัน<br>บนเวทีโลกได้อย่างภาคภูมิและไม่แพ้ใคร เราตั้งใจสร้าง<br>KAAN Show
+                    ให้เป็นนวัตกรรมการท่องเที่ยวที่เกิดจากฝีมือ<br>ความคิดสร้างสรรค์ของคนไทย และมุ่งให้การแสดงนี้<br>กลายเป็น Highlight Destination
+                    ใหม่ที่น่าสนใจในระดับโลก
                   </span>
                   <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
@@ -190,18 +188,18 @@
                 <p>
                   <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
                   <span>
-                    เราเคยมีประสบการณ์ทำงานด้านภาพยนตร์ไทยมาแล้ว ก็เลยอยากลองทำ
-                    Content ในรูปแบบอื่นดูบ้าง เราเลยไปชวนคนเก่งๆ
-                    ในสายเอนเตอร์เทนเมนท์มารวมตัวกันเพื่อสร้างสรรค์โชว์นี้ ซึ่งเราหวังว่า
-                    KAAN Show โชว์ของคนไทยที่คิดและสร้างสรรค์โดยคนไทยนี้
-                    จะเซ็ทมาตรฐานใหม่ของการแสดงในเมืองไทย
+                    เราเคยมีประสบการณ์ทำงานด้านภาพยนตร์ไทยมาแล้ว<br>ก็เลยอยากลองทำ
+                    Content ในรูปแบบอื่นดูบ้าง เราเลยไปชวนคนเก่งๆ<br>
+                    ในสายเอนเตอร์เทนเมนท์มารวมตัวกันเพื่อสร้างสรรค์โชว์นี้ ซึ่งเราหวังว่า<br>
+                    KAAN Show โชว์ของคนไทยที่คิดและสร้างสรรค์โดยคนไทยนี้<br>
+                    จะเซ็ทมาตรฐานใหม่ของการแสดงในเมืองไทย<br>
                     ที่ทั้งชาวไทยและชาวต่างชาติจะต้องยอมรับในฝีมือ
                   </span>
                   <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
                 <div class="uppercase grey">จินา โอสถศิลป์ (Jina Osothsilp)</div>
                 <div class='grey uppercase'>
-                  EXCUTIVE COMMITEE
+                  EXECUTIVE COMMITEE
                 </div>
               </div>
             </div>
@@ -214,15 +212,18 @@
                 <p>
                   <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
                   <span>
-                    คำจำกัดความของ KAAN Show คือ A Spectacular Cinematic Live Experience การแสดงที่ผสมผสานเทคนิคระดับโลกเข้ากับภาพยนตร์และ
-                    การแสดงสดบนเวที ซึ่งเป็นสิ่งที่ไม่เคยเกิดขึ้นมาก่อนในเมืองไทยเราจึงต้องระดมคนเก่งที่สุดในแต่ละด้านกว่า 600 ชีวิตที่เรียกได้ว่าเป็นทีมชาติฝั่งเอ็นเตอร์เทนเมนท์ของประเทศไทย
+                    คำจำกัดความของ KAAN Show คือ A Spectacular<br>
+                    Cinematic Live Experience การแสดงที่ผสมผสานเทคนิคระดับโลก<br>
+                    เข้ากับภาพยนตร์และการแสดงสดบนเวที ซึ่งเป็นสิ่งที่ไม่เคยเกิดขึ้นมาก่อน<br>
+                    ในเมืองไทยเราจึงต้องระดมคนเก่งที่สุดในแต่ละด้านกว่า 600 ชีวิต<br>
+                    ที่เรียกได้ว่าเป็นทีมชาติฝั่งเอ็นเตอร์เทนเมนท์ของประเทศไทย<br>
                     เราตั้งใจสร้างสรรค์ให้การแสดงนี้เป็นฝีมือคนไทยที่ไปไกลระดับโลก
                   </span>
                   <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
                 <div class="grey uppercase">ยงยุทธ ทองกองทุน (Yongyoot Thongkongtoon)</div>
                 <div class='grey uppercase'>
-                  Executive Committee,<br>Producer and Artistic Director
+                  Executive Committee, Producer and Artistic Director
                 </div>
               </div>
             </div>
@@ -235,8 +236,9 @@
                 <p>
                   <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
                   <span>
-                    เราเลือกเทคโนโลยีที่ดีที่สุดของโลกมากมายหลายรูปแบบเข้ามาใช้ร่วมสร้างสรรค์นวัตกรรมการแสดงในครั้งนี้ เพื่อเป้าหมายที่จะทำให้
-                    KAAN Showก้าวขึ้นเป็นสุดยอดการแสดงที่ผสมผสานเทคโนโลยีล้ำสมัยอันโดดเด่นแห่งหนึ่งของโลก
+                    เราเลือกเทคโนโลยีที่ดีที่สุดของโลกมากมายหลายรูปแบบ<br>
+                    เข้ามาใช้ร่วมสร้างสรรค์นวัตกรรมการแสดงในครั้งนี้ เพื่อเป้าหมาย<br>
+                    ที่จะทำให้ KAAN Show ก้าวขึ้นเป็นสุดยอดการแสดง<br>ที่ผสมผสานเทคโนโลยีล้ำสมัยอันโดดเด่นแห่งหนึ่งของโลก
                   </span>
                   <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
@@ -255,9 +257,11 @@
                 <p>
                   <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
                   <span>
-                    “อุตสาหกรรมบันเทิงเป็นธุรกิจที่มีมูลค่าสูงและมีแนวโน้มเติบโตได้อย่างไม่จำกัด เราทำ KAAN Show
-                    ขึ้นเพื่อตั้งใจสร้างมูลค่าให้กับความคิดสร้างสรรค์ของคนไทยให้ทั่วโลกยอมรับและเห็นคุณค่า มูลค่าที่ได้กลับมาไม่ใช่เพียงเม็ดเงินมหาศาลเท่านั้น
-                    แต่จะสร้างผลประโยชน์ด้านอื่นๆ อีกมากมายให้กับประเทศไทยด้วย”
+                    อุตสาหกรรมบันเทิงเป็นธุรกิจที่มีมูลค่าสูงและมีแนวโน้มเติบโต<br>
+                    ได้อย่างไม่จำกัด เราทำ KAAN Show ขึ้นเพื่อตั้งใจสร้างมูลค่า<br>
+                    ให้กับความคิดสร้างสรรค์ของคนไทยให้ทั่วโลกยอมรับและเห็นคุณค่า<br>
+                    มูลค่าที่ได้กลับมาไม่ใช่เพียงเม็ดเงินมหาศาลเท่านั้น<br>
+                    แต่จะสร้างผลประโยชน์ด้านอื่นๆ อีกมากมายให้กับประเทศไทยด้วย
                   </span>
                   <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
                 </p>
@@ -276,10 +280,13 @@
                 <p>
                   <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
                   <span>
-                    เป้าหมายของ KAAN คือการเป็นโชว์อันดับหนึ่งของเอเชีย และทำให้ D’LUCK Cinematic Theatre กลายเป็นแหล่งท่องเที่ยวแห่งใหม่ของไทยที่ดึงดูดนักท่องเที่ยวจากทั่วโลก
-                    รวมถึงสร้างรายได้ให้กับประเทศเราตั้งใจสร้างสรรค์การแสดงนี้ให้ได้มาตรฐานระดับโลกในทุกๆ ด้าน
-                    ไม่ว่าจะเป็นเทคโนโลยี, โปรดักชั่น, ตลอดจนทีมงานคุณภาพที่รวบรวมสุดยอดฝีมือของไทยหลายๆ
-                    ด้านเข้าด้วยกัน ที่สำคัญเราไม่ลืมสอดแทรกเสน่ห์ความเป็นไทยเข้าไปในทุกการให้บริการของเรา
+                    เป้าหมายของ KAAN คือการเป็นโชว์อันดับหนึ่งของเอเชีย<br>
+                    และทำให้ D’LUCK Cinematic Theatre กลายเป็นแหล่งท่องเที่ยวแห่งใหม่<br>
+                    ของไทยที่ดึงดูดนักท่องเที่ยวจากทั่วโลกรวมถึงสร้างรายได้ให้กับประเทศ<br>
+                    เราตั้งใจสร้างสรรค์การแสดงนี้ให้ได้มาตรฐานระดับโลกในทุกๆ ด้าน<br>
+                    ไม่ว่าจะเป็นเทคโนโลยี, โปรดักชั่น, ตลอดจนทีมงานคุณภาพที่รวบรวม<br>
+                    สุดยอดฝีมือของไทยหลายๆด้านเข้าด้วยกัน ที่สำคัญเราไม่ลืมสอดแทรก<br>
+                    เสน่ห์ความเป็นไทยเข้าไปในทุกการให้บริการของเรา<br>
                     เพื่อให้ผู้ชมทุกคนประทับใจกับการสัมผัสประสบการณ์ที่แปลกใหม่นี้
                   </span>
                   <img src='./images/right-quote.png' width="35" style='margin-bottom: 10px;'/>
@@ -324,7 +331,7 @@
                           <span class="bold board-english-name">JINA OSOTHSILP</span>
                           <br />
                           <span class="grey board-position">
-                            EXCUTIVE COMMITEE
+                            EXECUTIVE COMMITEE
                           </span>
                         </div>
                       </div>
@@ -340,7 +347,7 @@
                           <span class="bold board-english-name">Yongyoot Thongkongtoon</span>
                           <br />
                           <span class="grey board-position">
-                            EXCUTIVE COMMITEE,<br />
+                            EXECUTIVE COMMITEE,<br />
                             PRODUCER AND ARTIST DIRECTOR
                           </span>
                         </div>
@@ -386,7 +393,7 @@
                     </div>
                     <div class="board-card col-sm-4">
                       <a href="#modal-link--board6" class='modal-trigger'>
-                        <img src="" />
+                        <img src="./images/tanapol.png" />
                       </a>
                       <div class="board-detail">
                         <div class='board-detail-name'>
@@ -514,14 +521,6 @@
             </div>
           </div>
           <div class='row'>
-            <a href='#modal-link--partner1' class='modal-trigger'>
-              <div class='logo-box'>
-                <div class='logo-box__content'>
-                  <img src='./images/logo/A49@1x.png' width="120">
-                </div>
-                <div class='logo-des'>A49</div>
-              </div>
-            </a>
             <a href='#modal-link--partner2' class='modal-trigger'>
               <div class='logo-box'>
                 <div class='logo-box__content'>
@@ -532,24 +531,6 @@
                 <div class='logo-des'>SANOOKDEE TAWEESOOK</div>
               </div>
             </a>
-            <a href='#modal-link--partner3' class='modal-trigger'>
-              <div class='logo-box'>
-                <div class='logo-box__content'>
-                  <img src='./images/logo/XTP official logo.png' width='170'>
-                </div>
-                <div class='logo-des'>XTREAM PLUS</div>
-              </div>
-            </a>
-          </div>
-          <div class='row'>
-            <a href='#modal-link--partner4' class='modal-trigger'>
-              <div class='logo-box'>
-                <div class='logo-box__content'>
-                  <img src='./images/logo/logo baanrig 2012@1x.png' width="120">
-                </div>
-                <div class='logo-des'>BAAN RIG</div>
-              </div>
-            </a>
             <a href='#modal-link--partner5' class='modal-trigger'>
               <div class='logo-box'>
                 <div class='logo-box__content'>
@@ -558,6 +539,32 @@
 
                 </div>
                 <div class='logo-des'>SCENARIO</div>
+              </div>
+            </a>
+            <a href='#modal-link--partner4' class='modal-trigger'>
+              <div class='logo-box'>
+                <div class='logo-box__content'>
+                  <img src='./images/logo/logo baanrig 2012@1x.png' width="120">
+                </div>
+                <div class='logo-des'>BAAN RIG</div>
+              </div>
+            </a>
+          </div>
+          <div class='row'>
+            <a href='#modal-link--partner3' class='modal-trigger'>
+              <div class='logo-box'>
+                <div class='logo-box__content'>
+                  <img src='./images/logo/XTP official logo.png' width='170'>
+                </div>
+                <div class='logo-des'>XTREAM PLUS</div>
+              </div>
+            </a>
+            <a href='#modal-link--partner1' class='modal-trigger'>
+              <div class='logo-box'>
+                <div class='logo-box__content'>
+                  <img src='./images/logo/A49@1x.png' width="120">
+                </div>
+                <div class='logo-des'>A49</div>
               </div>
             </a>
             <a href='#modal-link--partner6' class='modal-trigger'>
@@ -638,7 +645,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js'></script>
 <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/unslider/2.0.3/js/unslider-min.js'></script>
-<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script src='./js/index.js'></script>
 
 </html>
