--- a/public/index.html
+++ b/public/index.html
@@ -163,7 +163,7 @@
             <div class='modal-hide'>
               <div class='x-modal'>X</div>
               <img src="./images/Untitled-4.png" />
-              <div class="board-detail modal-content">
+              <div class="k-detail modal-content">
                 <p>
                   <img src='./images/left-quote.png' width="35" style='margin-top: -15px;'/>
                   <span>
@@ -422,15 +422,16 @@
             <div class='modal-hide modal-hide--logo'>
               <div class='x-modal'>X</div>
               <img src="./images/logo/A49@1x.png"/>
-              <div class="board-detail modal-content">
-                <h2>A49</h2>
+              <div class="partner-detail modal-content">
+                <h2>บริษัท สถาปนิก 49 จำกัด</h2>
+                <div class='sub-title'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ผู้นําความคิดทางด้านสถาปัตยกรรมของประเทศไทย</div>
                 <p>
-                  "อุตสาหกรรมบันเทิงไทยมีศักยภาพ ที่จะไปแข่งบนเวทีโลกได้อย่างภาคภูมิ
-                  และไม่แพ้ใคร เราตั้งใจสร้าง KAAN SHOW ให้เป็นนวัตกรรมการท่องเที่ยวที่เกิดจากฝีมือความคิด"<br />
-                  "อุตสาหกรรมบันเทิงไทยมีศักยภาพ ที่จะไปแข่งบนเวทีโลกได้อย่างภาคภูมิ
+                บริษัทสถาปนิกชั้นนำของประเทศไทย ที่มีชื่อเสียงโด่งดังระดับโลก<br>
+                ผู้ออกแบบ D’LUCK Cinematic Theatre ภายใต้แนวคิด “Levitation”<br>
+                ด้วยความเชื่อมั่นว่าที่นี่จะกลายเป็นแลนด์มาร์คทางสถาปัตยกรรมใหม่ของเมืองไทย
                 </p>
-                <div class="facebook-icon">
-                  <img src='./images/facebook.png' />
+                <div class="web-icon">
+                  <a href='http://www.a49.co.th'><img src='./images/KAAN Web_Icon Link to Website_ch_20161007.png' /></a>
                 </div>
               </div>
             </div>
@@ -439,18 +440,13 @@
             <div class='modal-hide modal-hide--logo'>
               <div class='x-modal'>X</div>
               <img src="./images/logo/Master_SANOOKDEE_30x27cm.png"/>
-              <div class="board-detail modal-content">
-                <h2>SANOOKDEE TAWEESOOK</h2>
+              <div class="partner-detail modal-content">
+                <h2>บริษัท สนุกดีทวีสุข จำกัด</h2>
+                <div class='sub-title'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;บริษัทสร้างสรรค์ความสนุก เสิร์ฟประสบการณ์แปลกใหม่<br>ไม่ซ้ำใคร </div>
                 <p>
-                  "อุตสาหกรรมบันเทิงไทยมีศักยภาพ ที่จะไปแข่งบนเวทีโลกได้อย่างภาคภูมิ
-                  และไม่แพ้ใคร เราตั้งใจสร้าง KAAN SHOW ให้เป็นนวัตกรรมการท่องเที่ยวที่เกิดจากฝีมือความคิด"<br />
-                  "อุตสาหกรรมบันเทิงไทยมีศักยภาพ ที่จะไปแข่งบนเวทีโลกได้อย่างภาคภูมิ
-                  และไม่แพ้ใคร เราตั้งใจสร้าง KAAN SHOW ให้เป็นนวัตกรรมการท่องเที่ยวที่เกิดจากฝีมือความคิด"
-                  "อุตสาหกรรมบันเทิงไทยมีศักยภาพ ที่จะไปแข่งบนเวทีโลกได้อย่างภาคภูมิ
+                  สนุกดีทวีสุข ผู้รับผิดชอบงานสร้างสรรค์ ตั้งแต่ขั้นตอนการทำ<br>บทละคร จนถึงการถ่ายทอดจินตนาการออกมาเป็นความมหัศจรรย์<br>
+                  บนเวที KAAN Show
                 </p>
-                <div class="facebook-icon">
-                  <img src='./images/facebook.png' />
-                </div>
               </div>
             </div>
           </div>
@@ -458,16 +454,25 @@
             <div class='modal-hide modal-hide--logo'>
               <div class='x-modal'>X</div>
               <img src="./images/logo/XTP official logo.png"/>
-              <div class="board-detail modal-content">
-                <h2>XTREAM PLUS</h2>
+              <div class="partner-detail modal-content">
+                <h2>บริษัท เอ็กซ์ทรีมพลัส จำกัด</h2>
+                <div class='sub-title'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ผู้เชี่ยวชาญ ด้านการสร้างสรรค์และการจัดสร้างเทคโนโลยีเพื่อความตื่นตาตื่นใจ (Immersive Technology)</div>
                 <p>
-                  "อุตสาหกรรมบันเทิงไทยมีศักยภาพ ที่จะไปแข่งบนเวทีโลกได้อย่างภาคภูมิ
-                  และไม่แพ้ใคร เราตั้งใจสร้าง KAAN SHOW ให้เป็นนวัตกรรมการท่องเที่ยวที่เกิดจากฝีมือความคิด"<br />
-                  "อุตสาหกรรมบันเทิงไทยมีศักยภาพ ที่จะไปแข่งบนเวทีโลกได้อย่างภาคภูมิ
+                  ผู้ออกแบบ สร้างสรรค์ สรรหา เทคโนโลยีระดับโลกต่างๆ ตลอดจนดูแล<br>
+                  การผลิตและจัดสร้าง ทั้ง Projection mapping, Animatronic,<br>
+                  Mechanic, Sensor และระบบ Automation ควบคุมการแสดงทั้งหมด<br>
+                  เพื่อให้จินตนาการจากบท ปรากฏเป็นความอัศจรรย์ที่สัมผัสได้จริงใน KAAN Show
                 </p>
-                <div class="facebook-icon">
-                  <img src='./images/facebook.png' />
+                <a href='http://www.xtreme-plus.com'>
+                <div class="web-icon">
+                  <img src='./images/KAAN Web_Icon Link to Website_ch_20161007.png' />
                 </div>
+                </a>
+                <a href='http://www.facebook.com/XtremePlus'>
+                  <div class="facebook-icon">
+                    <img src='./images/facebook.png' />
+                  </div>
+                </a>
               </div>
             </div>
           </div>
@@ -475,16 +480,20 @@
             <div class='modal-hide modal-hide--logo'>
               <div class='x-modal'>X</div>
               <img src="./images/logo/logo baanrig 2012@1x.png"/>
-              <div class="board-detail modal-content">
-                <h2>BAAN RIG</h2>
+              <div class="partner-detail modal-content">
+                <h2>บริษัท บ้านริก จำกัด</h2>
+                <div class='sub-title'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ผู้เชี่ยวชาญด้านระบบสลิง Special effect แมคคาทรอนิคส์<br>และระบบ Rigging Theatre ที่มีชื่อเสียงในระดับสากล</div>
                 <p>
-                  "อุตสาหกรรมบันเทิงไทยมีศักยภาพ ที่จะไปแข่งบนเวทีโลกได้อย่างภาคภูมิ
-                  และไม่แพ้ใคร เราตั้งใจสร้าง KAAN SHOW ให้เป็นนวัตกรรมการท่องเที่ยวที่เกิดจากฝีมือความคิด"<br />
-                  "อุตสาหกรรมบันเทิงไทยมีศักยภาพ ที่จะไปแข่งบนเวทีโลกได้อย่างภาคภูมิ
+                  จากประสบการณ์การทำงานร่วมกับชาวไทยและชาวต่างชาติมาหลายสิบปี<br>
+                  ทีมบ้านริกรับหน้าที่ดูแลและจัดการเรื่องเทคนิคพิเศษต่างๆของโชว์<br>
+                  รวมทั้งระบบ Theatre System ของ D’LUCK Cinematic Theatre<br>
+                  เพื่อให้ KAAN เป็นโชว์ที่สร้างความตื่นตาตื่นใจให้กับคนดูทุกๆนาที โดยที่มีความปลอดภัยในการแสดงอย่างสูงสุด
                 </p>
-                <div class="facebook-icon">
-                  <img src='./images/facebook.png' />
+                <a href='http://www.baanrig.com'>
+                <div class="web-icon">
+                  <img src='./images/KAAN Web_Icon Link to Website_ch_20161007.png' />
                 </div>
+                </a>
               </div>
             </div>
           </div>
@@ -492,16 +501,24 @@
             <div class='modal-hide modal-hide--logo'>
               <div class='x-modal'>X</div>
               <img src="./images/logo/logo-scenario.png"/>
-              <div class="board-detail modal-content">
-                <h2>SCENARIO</h2>
+              <div class="partner-detail modal-content">
+                <h2>บริษัท ซีเนริโอ จำกัด</h2>
+                <div class='sub-title'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ผู้ผลิตละครเวที และ Live Show ชั้นนําของเมืองไทย<br>ที่มีประสบการณ์มากกว่า 10 ปี</div>
                 <p>
-                  "อุตสาหกรรมบันเทิงไทยมีศักยภาพ ที่จะไปแข่งบนเวทีโลกได้อย่างภาคภูมิ
-                  และไม่แพ้ใคร เราตั้งใจสร้าง KAAN SHOW ให้เป็นนวัตกรรมการท่องเที่ยวที่เกิดจากฝีมือความคิด"<br />
-                  "อุตสาหกรรมบันเทิงไทยมีศักยภาพ ที่จะไปแข่งบนเวทีโลกได้อย่างภาคภูมิ
+                  ทีม Scenario รับหน้าที่ในการวางแผนควบคุมดูแลนักแสดงและทีมงาน<br>
+                  รวมถึงการออกแบบและบริหารจัดการ D’LUCK Cinematic Theatre<br>
+                  เพื่อให้ KAAN เป็นโชว์ที่เต็มไปด้วยบุคลากรที่ทำงานอย่างมืออาชีพ
                 </p>
+                <a href='http://www.scenario.co.th'>
+                <div class="web-icon">
+                  <img src='./images/KAAN Web_Icon Link to Website_ch_20161007.png' />
+                </div>
+                </a>
+                <a href='https://www.facebook.com/Exact.Scenario/'>
                 <div class="facebook-icon">
                   <img src='./images/facebook.png' />
                 </div>
+              </a>
               </div>
             </div>
           </div>
@@ -509,14 +526,15 @@
             <div class='modal-hide modal-hide--logo'>
               <div class='x-modal'>X</div>
               <img src="./images/logo/Panjalucl_Our Partner_RITTA logo.png"/>
-              <div class="board-detail modal-content">
-                <h2>RITTA</h2>
+              <div class="partner-detail modal-content">
+                <h2>บริษัท ฤทธา จำกัด</h2>
+                <div class='sub-title'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;บริษัทออกแบบและก่อสร้างอาคารมาตรฐานสูงของประเทศไทย</div>
                 <p>
-                  "อุตสาหกรรมบันเทิงไทยมีศักยภาพ ที่จะไปแข่งบนเวทีโลกได้อย่างภาคภูมิ
-                  และไม่แพ้ใคร เราตั้งใจสร้าง KAAN SHOW ให้เป็นนวัตกรรมการท่องเที่ยวที่เกิดจากฝีมือความคิด"<br />
-                  "อุตสาหกรรมบันเทิงไทยมีศักยภาพ ที่จะไปแข่งบนเวทีโลกได้อย่างภาคภูมิ
-                  และไม่แพ้ใคร เราตั้งใจสร้าง KAAN SHOW ให้เป็นนวัตกรรมการท่องเที่ยวที่เกิดจากฝีมือความคิด"
+                  ผู้รับเหมาหลักของโครงการก่อสร้าง D’LUCK Cinematic Theatre<br>ด้วยมาตรฐาน คุณภาพและความปลอดภัยระดับสากล
                 </p>
+                <div class="web-icon">
+                  <a href='http://www.ritta.co.th/'><img src='./images/KAAN Web_Icon Link to Website_ch_20161007.png' /></a>
+                </div>
               </div>
             </div>
           </div>
