--- a/public/index.html
+++ b/public/index.html
@@ -428,7 +428,8 @@
                 <p>
                 บริษัทสถาปนิกชั้นนำของประเทศไทย ที่มีชื่อเสียงโด่งดังระดับโลก<br>
                 ผู้ออกแบบ D’LUCK Cinematic Theatre ภายใต้แนวคิด “Levitation”<br>
-                ด้วยความเชื่อมั่นว่าที่นี่จะกลายเป็นแลนด์มาร์คทางสถาปัตยกรรมใหม่ของเมืองไทย
+                ด้วยความเชื่อมั่นว่าที่นี่จะกลายเป็นแลนด์มาร์คทางสถาปัตยกรรมใหม่<br>
+                ของเมืองไทย
                 </p>
                 <div class="web-icon">
                   <a href='http://www.a49.co.th'><img src='./images/KAAN Web_Icon Link to Website_ch_20161007.png' /></a>
