--- a/public/index.html
+++ b/public/index.html
@@ -370,7 +370,7 @@
                           <span class="bold board-english-name">Anant Trisirikasem</span>
                           <br />
                           <span class="grey board-position">
-                            Executive Committee, <br />Theatre’s Technology and SystemSpecialist
+                            Executive Committee, <br />Theatre’s Technology and System Specialist
                           </span>
                         </div>
                       </div>
@@ -432,7 +432,7 @@
                 ของเมืองไทย
                 </p>
                 <div class="web-icon">
-                  <a href='http://www.a49.co.th'><img src='./images/KAAN Web_Icon Link to Website_ch_20161007.png' /></a>
+                  <a target='_blank' href='http://www.a49.co.th'><img src='./images/KAAN Web_Icon Link to Website_ch_20161007.png' /></a>
                 </div>
               </div>
             </div>
@@ -464,12 +464,12 @@
                   Mechanic, Sensor และระบบ Automation ควบคุมการแสดงทั้งหมด<br>
                   เพื่อให้จินตนาการจากบท ปรากฏเป็นความอัศจรรย์ที่สัมผัสได้จริงใน KAAN Show
                 </p>
-                <a href='http://www.xtreme-plus.com'>
+                <a target='_blank' href='http://www.xtreme-plus.com'>
                 <div class="web-icon">
                   <img src='./images/KAAN Web_Icon Link to Website_ch_20161007.png' />
                 </div>
                 </a>
-                <a href='http://www.facebook.com/XtremePlus'>
+                <a target='_blank' href='http://www.facebook.com/XtremePlus'>
                   <div class="facebook-icon">
                     <img src='./images/facebook.png' />
                   </div>
@@ -490,7 +490,7 @@
                   รวมทั้งระบบ Theatre System ของ D’LUCK Cinematic Theatre<br>
                   เพื่อให้ KAAN เป็นโชว์ที่สร้างความตื่นตาตื่นใจให้กับคนดูทุกๆนาที โดยที่มีความปลอดภัยในการแสดงอย่างสูงสุด
                 </p>
-                <a href='http://www.baanrig.com'>
+                <a target='_blank' href='http://www.baanrig.com'>
                 <div class="web-icon">
                   <img src='./images/KAAN Web_Icon Link to Website_ch_20161007.png' />
                 </div>
@@ -510,12 +510,12 @@
                   รวมถึงการออกแบบและบริหารจัดการ D’LUCK Cinematic Theatre<br>
                   เพื่อให้ KAAN เป็นโชว์ที่เต็มไปด้วยบุคลากรที่ทำงานอย่างมืออาชีพ
                 </p>
-                <a href='http://www.scenario.co.th'>
+                <a target='_blank' href='http://www.scenario.co.th'>
                 <div class="web-icon">
                   <img src='./images/KAAN Web_Icon Link to Website_ch_20161007.png' />
                 </div>
                 </a>
-                <a href='https://www.facebook.com/Exact.Scenario/'>
+                <a target='_blank' href='https://www.facebook.com/Exact.Scenario/'>
                 <div class="facebook-icon">
                   <img src='./images/facebook.png' />
                 </div>
@@ -534,7 +534,7 @@
                   ผู้รับเหมาหลักของโครงการก่อสร้าง D’LUCK Cinematic Theatre<br>ด้วยมาตรฐาน คุณภาพและความปลอดภัยระดับสากล
                 </p>
                 <div class="web-icon">
-                  <a href='http://www.ritta.co.th/'><img src='./images/KAAN Web_Icon Link to Website_ch_20161007.png' /></a>
+                  <a target='_blank' href='http://www.ritta.co.th/'><img src='./images/KAAN Web_Icon Link to Website_ch_20161007.png' /></a>
                 </div>
               </div>
             </div>
